<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="red">#FF0000</color>
	<color name="white">#FFFFFF</color>
	<color name="lime">#00FF00</color>
		    <string name="Clear">Clear</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Back">Back</string>
    <string name="app_name">Rotten Tomatoes</string>
    <string name="enter">Enter a Movie Name You Want to Rate</string>
    <string name="review">Enter Your Review Here</string>
    <string name="submit">Submit</string>
    <string name="listofmoviesavilable">
        
        The following list of movies are available for rating</string>
        <string name="m2016">2016 Movies</string>
        <string name="January">Movies Relasing in January </string>
        <string name="wazir">Wazir</string>
        <string name="airlift">Airlift</string>
        <string name="kkh3">Kyaa Kool Hain Hum 3</string>
        <string name="masti">Mastizaade</string>
        <string name="February">Movies Relasing in February</string>
        <string name="stk">Sanam Teri Kasam</string>
        <string name="fitoor">Fitoor</string>
        <string name="sr">Sanam Re</string>
        <string name="neerja">Neerja</string>
        <string name="March">Movies Relasing in March </string>
        <string name="kands">Kapoor and Sons</string>
        <string name="rh">Rocky Handsome</string>
        <string name="April">Movies Relasing in April</string>
        <string name="kika">Ki and Ka </string>
        <string name="fan">Fan</string>
        <string name="May">Movies Relasing in May</string>
        <string name="azhar">Azhar</string>
        <string name="June">Movies Relasing in June </string>
        <string name="hf">HouseFull 3</string>
        <string name="jj">Jagga Jasoos</string>
        <string name="dlkk">Do Lafzo Ki Kahani</string>
        <string name="July">Movies Relasing in July </string>
        <string name="raees">Raees</string>
        <string name="sultan">Sultan</string>
        <string name="dishoom">Dishoom</string> 
        <string name="August">Movies Relasing in August </string>
        <string name="phh3">Phir Hera Pheri 3</string>
        <string name="September">Movies Relasing in September </string>
        <string name="ms">M.S Dhoni: The Untold Story</string>
        <string name="bbd">Baar Baar Dekho</string>
        <string name="October">Movies Relasing in October </string>
        <string name="adhm">Ae Dil Hai Mushkil</string>
        <string name="November">Movies Relasing in November</string>
        <string name="ro2">Rock On 2</string>
        <string name="December">Movies Relasing in December </string>
        <string name="dangal">Dangal</string>
        <string name="m2015">2015 Movies</string>
        <string name="alone">Alone</string>
        <string name="baby">Baby</string>
        <string name="dkd">Dolly ki Doli</string>
        <string name="hwzd">Hawaizaada</string>
        <string name="kham">Khamoshiyan</string>
        <string name="sham">Shamitabh</string>
        <string name="badla">Badlapur</string>
        <string name="dlhs">Dum Laga Ke Haisha</string>
        <string name="nh">NH 10</string>
        <string name="x">Mr.X</string>
        <string name="gib">Gabbar is Back</string>
        <string name="piku">Piku</string>
        <string name="ddd">Dil Dhadakne Do</string>
        <string name="hak">Hamari Aadhori Kahani</string>
        <string name="abcd2">ABCD2</string>
        <string name="gr">Guddu Rangeela</string>
        <string name="baahu">Baahubali</string>
        <string name="bb">Bajrangi Bhaijaan</string>
        <string name="d">Drishyam</string>
        <string name="m">Manjhi</string>
        <string name="p">Phantom</string>
        <string name="wb">Welcome Back</string>
        <string name="pkp2">Pyaar Ka Punchnama 2</string>
        <string name="prdp">Prem Ratan Dhan Payo</string>
        <string name="t">Tamasha</string>
        <string name="hs3">Hate Story 3</string>
        <string name="bm">Bajirao Mastani</string>
        <string name="dil">Dilwale</string>
        <string name="action_settings">Settings</string>
        
        <string name="How">
            Welcome to RottenTomatoes. As You know this app is for rating a movie. The movies which are available to rate are only of the year 2015 and 2016. For the List of Movies Please refer to the List of Available Movies Option by going back to the main menu.
            For rating a movie You just have to type movie name or half name as there is an autocomplete feature to make your work easy. All the details related to the movie will come automaticlly, you just have to rate with the help of the star and by leaving a comment.
            Thank You for using the app. Hope You have a good day.
        </string>
        <string name="about">
            Developed by Mr.Mohammed Faiyyaz Abdul Rahim Khatri, a student hoping to get placed in a good android application development company.
        </string>
        <string name="copywright">
           ©®2016 All Rights Reserved. 
        </string>
</resources>