<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/star" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:gravity="center_vertical"
        android:text="ROTTEN TOMATOES"
        android:textColor="@color/white"
        android:textSize="20dp" />

        <CheckBox
            android:id="@+id/RememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Password"
            android:layout_below="@+id/Password"
            android:text="Remember Me"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/RememberMe"
            android:layout_below="@+id/RememberMe"
            android:layout_weight="1"
            android:background="@color/lime"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Login" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:gravity="fill_horizontal"
            android:hint="Please Enter Your Username"
            android:inputType="text"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Username"
            android:layout_below="@+id/Username"
            android:ems="10"
            android:gravity="fill_horizontal"
            android:hint="Please Enter Your Password"
            android:inputType="textPassword"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/Register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Login"
            android:layout_below="@+id/Login"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/lime"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Register" />

        <Button
            android:id="@+id/Clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Register"
            android:layout_below="@+id/Register"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/lime"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Clear" />

</RelativeLayout>